Minor changes and Javadoc cleanup.